--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.joooonho:selectableroundedimageview:1.0.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
 
 }
