--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     implementation 'com.joooonho:selectableroundedimageview:1.0.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
 }
