--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'org.jsoup:jsoup:1.15.3'
+    implementation 'com.github.wdsqjq:AndRatingBar:1.0.6'
 
 }
