--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
         mavenCentral()
-
+        jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://artifacts.applovin.com/android' }
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.13'
+        classpath "com.applovin.quality:AppLovinQualityServiceGradlePlugin:+"
 
     }
 }
