--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ pluginManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-
+        maven { url 'https://artifacts.applovin.com/android' }
 
     }
 }
@@ -14,7 +14,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-
+        maven { url 'https://artifacts.applovin.com/android' }
     }
 }
 rootProject.name = "AppBelajarKomik"
